Se agrega controlador de examen dental
