# swagger/swagger.yml
@@ -1493,6 +1493,120 @@ paths:
           description: '{string} borrado exitoso!'
         "403":
           description: Id vacío
+  /odontologiaExamenDental/:
+    get:
+      tags:
+      - odontologiaExamenDental
+      description: consulta todos los registros de la tabla OdontologiaExamenDental
+      operationId: OdontologiaExamenDentalController.Get All
+      parameters:
+      - in: consulta
+        name: query
+        description: 'Filtro. Por ejemplo, col1: v1, col2: v2 ...'
+        type: string
+      - in: consulta
+        name: fields
+        description: Campos devueltos. Por ejemplo, col1, col2 ...
+        type: string
+      - in: consulta
+        name: sortby
+        description: Campos ordenados por. Por ejemplo, Col1, col2 ...
+        type: string
+      - in: consulta
+        name: order
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
+        type: string
+      - in: consulta
+        name: limit
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
+        type: string
+      - in: consulta
+        name: offset
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.OdontologiaExamenDental'
+        "403":
+          description: ""
+    post:
+      tags:
+      - odontologiaExamenDental
+      description: agregar un registro en la tabla OdontologiaExamenDental
+      operationId: OdontologiaExamenDentalController.Post
+      parameters:
+      - in: body
+        name: body
+        description: Cuerpo para el contenido de OdontologiaExamenDental
+        required: true
+        schema:
+          $ref: '#/definitions/models.OdontologiaExamenDental'
+      responses:
+        "201":
+          description: '{int} models.OdontologiaExamenDental'
+        "403":
+          description: Cuerpo Vacío
+  /odontologiaExamenDental/{id}:
+    get:
+      tags:
+      - odontologiaExamenDental
+      description: consultar un registro de la tabla OdontologiaExamenDental por su id
+      operationId: OdontologiaExamenDentalController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: Id a consultar
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.OdontologiaExamenDental'
+        "403":
+          description: :id está vacío
+    put:
+      tags:
+      - odontologiaExamenDental
+      description: actualizar un registro de la tabla OdontologiaExamenDental
+      operationId: OdontologiaExamenDentalController.Put
+      parameters:
+      - in: path
+        name: id
+        description: Id del registro a actualizar
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: Cuerpo para el contenido de OdontologiaExamenDental
+        required: true
+        schema:
+          $ref: '#/definitions/models.OdontologiaExamenDental'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.OdontologiaExamenDental'
+        "403":
+          description: :id no es entero
+    delete:
+      tags:
+      - odontologiaExamenDental
+      description: elimina un registro de la tabla OdontologiaExamenDental
+      operationId: OdontologiaExamenDentalController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: Id del registro a eliminar
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} borrado exitoso!'
+        "403":
+          description: Id vacío
 definitions:
   models.AccesoHistoriaClinica:
     title: AccesoHistoriaClinica
@@ -1637,141 +1751,4 @@ definitions:
         type: string
       Observacion:
         type: string
-  models.MedicinaTipoAntecedente:
-    title: MedicinaTipoAntecedente
-    type: object
-    properties:
-      Activo:
-        type: boolean
-      Descripcion:
-        type: string
-      FechaCreacion:
-        type: string
-        format: datetime
-      FechaModificacion:
-        type: string
-        format: datetime
-      IdTipoAntecedente:
-        type: integer
-        format: int64
-      Nombre:
-        type: string
-  models.MedicinaTipoExamen:
-    title: MedicinaTipoExamen
-    type: object
-    properties:
-      IdTipoExamen:
-        type: integer
-        format: int64
-      Nombre:
-        type: string
-  models.OdontologiaAnamnesis:
-    title: OdontologiaAnamnesis
-    type: object
-    properties:
-      Alergias:
-        type: string
-      AntecedenteFamiliar:
-        type: string
-      Cardiopatias:
-        type: string
-      Ceda:
-        type: string
-      Cepillado:
-        type: string
-      Chicle:
-        type: string
-      Diabetes:
-        type: string
-      Dulces:
-        type: string
-      EnfermedadRespiratoria:
-        type: string
-      Enjuague:
-        type: string
-      FiebreReumatica:
-        type: string
-      Fuma:
-        type: string
-      Hemorragias:
-        type: string
-      Hepatitis:
-        type: string
-      Hipertension:
-        type: string
-      IdHistoriaClinica:
-        $ref: '#/definitions/models.MedicinaHistoriaClinica'
-      IdOdontologiaAnamnesis:
-        type: integer
-        format: int64
-      Irradiaciones:
-        type: string
-      Medicamentos:
-        type: string
-      Otras:
-        type: string
-      Sinusitis:
-        type: string
-      Tratamiento:
-        type: string
-      UltimaVisita:
-        type: string
-        format: datetime
-  models.OdontologiaControlPlaca:
-    title: OdontologiaControlPlaca
-    type: object
-    properties:
-      Fecha:
-        type: string
-        format: datetime
-      IdHojaHistoria:
-        $ref: '#/definitions/models.MedicinaHojaHistoria'
-      IdTipoOdontograma:
-        $ref: '#/definitions/models.OdontologiaTipoOdontograma'
-      IdcontrolPlaca:
-        type: integer
-        format: int64
-      IndiceActual:
-        type: integer
-        format: int64
-      IndiceAnterior:
-        type: integer
-        format: int64
-      Observaciones:
-        type: string
-      Vestibulares:
-        type: string
-  models.OdontologiaDiagnostico:
-    title: OdontologiaDiagnostico
-    type: object
-    properties:
-      Diagnostivo:
-        type: string
-      Evolucion:
-        type: string
-      IdDiagnostico:
-        type: integer
-        format: int64
-      IdHojaHistoria:
-        $ref: '#/definitions/models.MedicinaHojaHistoria'
-      Observaciones:
-        type: string
-      Pronostico:
-        type: string
-  models.OdontologiaTipoOdontograma:
-    title: OdontologiaTipoOdontograma
-    type: object
-    properties:
-      Descripcion:
-        type: string
-      FechaCreacion:
-        type: string
-        format: datetime
-      FechaModificacion:
-        type: string
-        format: datetime
-      IdTipoOdontograma:
-        type: integer
-        format: int64
-      Nombre:
-        type: string
+  models.MedicinaTipoAnt
